--- a/python.qmd
+++ b/python.qmd
@@ -1,3 +1,3 @@
-# PART 1: FINDING PYTHON
+# PART 1: STEP INTO PYTHON
 
 In this section we gently introduce Python fundamentals. But first, we have to find the Python.
